fix(blog): Fix layout issues on blog post page and root layout
- Add `overflow-hidden` class to root layout to prevent horizontal scrolling on smaller screens
- Add `overflow-hidden` class to the blog post page to prevent layout issues
- Remove unnecessary height declaration from html and body in globals.css

--- a/app/globals.css
+++ b/app/globals.css
@@ -84,11 +84,6 @@
   }
 }
 
-html,
-body {
-  height: 100%;
-}
-
 :root {
   --primary: #06b200;
   --gray: #868c98;
